pkg/gateway/xds/translator/testdata/out/xds-ir/multiple-listeners-same-port-with-different-filters.routes.yaml
- ignorePortInHostMatching: true
  name: default/gateway-1/http
  virtualHosts:
  - domains:
    - www.foo.com
    name: default/gateway-1/http/www_foo_com
    routes:
    - match:
        pathSeparatedPrefix: /foo1
      metadata:
        filterMetadata:
          apoxy:
            gateway: gateway-1
            listener: http
            route_kind: HTTPRoute
            route_name: httproute-1
            route_rule: "0"
      name: httproute/default/httproute-1/rule/0/match/0/www_foo_com
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.basic_auth/httproute/default/httproute-1/rule/0/match/0/www_foo_com:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/brotli:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/gzip:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/zstd:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.dynamic_forward_proxy/httproute/default/httproute-1/rule/0/match/0/www_foo_com:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
    - match:
        pathSeparatedPrefix: /foo2
      metadata:
        filterMetadata:
          apoxy:
            gateway: gateway-1
            listener: http
            route_kind: HTTPRoute
            route_name: httproute-2
            route_rule: "0"
      name: httproute/default/httproute-2/rule/0/match/0/www_foo_com
      route:
        cluster: httproute/default/httproute-2/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.compressor/default/brotli:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/gzip:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/zstd:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.dynamic_forward_proxy/httproute/default/httproute-2/rule/0/match/0/www_foo_com:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.ext_authz/httproute/default/httproute-2/rule/0/match/0/www_foo_com:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
  - domains:
    - www.bar.com
    name: default/gateway-2/http/www_bar_com
    routes:
    - match:
        pathSeparatedPrefix: /bar
      metadata:
        filterMetadata:
          apoxy:
            gateway: gateway-2
            listener: http
            route_kind: HTTPRoute
            route_name: httproute-3
            route_rule: "0"
      name: httproute/default/httproute-3/rule/0/match/0/www_bar_com
      route:
        cluster: httproute/default/httproute-3/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.compressor/default/brotli:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/gzip:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/zstd:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.dynamic_forward_proxy/httproute/default/httproute-3/rule/0/match/0/www_bar_com:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.oauth2_httproute/default/httproute-3/rule/0/match/0/www_bar_com:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
